namespaces/live.cloud-platform.service.justice.gov.uk/laa-cla-public-dnstest/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "laa-cla-public-dnstest"
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "dnstest"
    cloud-platform.justice.gov.uk/namespace: "laa-cla-public-dnstest"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "LAA"
    cloud-platform.justice.gov.uk/slack-channel: "cla-alerts"
    cloud-platform.justice.gov.uk/application: "Civil Legal Advice Public"
    cloud-platform.justice.gov.uk/owner: "LAA Get Access: civil-legal-advice@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/cla_public"
    cloud-platform.justice.gov.uk/team-name: "laa-get-access"
    cloud-platform.justice.gov.uk/review-after: ""
